[project]
name = "hdx-cod-ab-cleaner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas",
    "httpx[http2]",
    "psycopg",
    "pyarrow",
    "pycountry",
    "python-dotenv",
    "shapely",
    "tenacity",
]

[dependency-groups]
dev = ["pre-commit", "ruff", "taskipy"]

[tool.taskipy.tasks]
# uv run task app
app = "python -m app"
ruff = "ruff format && ruff check && ruff format"

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["D100", "D104", "S603", "S607", "INP001", "TID252"]
select = ["ALL"]
